# libfontlist

./: CMakeLists.txt  LICENSE  README.md
include/: fontlist.hpp
src/: font_linux.cpp  font_linux.hpp  font_macos.cpp  font_macos.hpp  font_windows.cpp  font_windows.hpp  fontlist.cpp
test/: enumerate.cpp
